# btxd-android

./: .gitignore  .gitmodules  AndroidManifest.xml  README.md
cpp/: CMakeLists.txt
cpp/cmake/: libs.android.cmake
cpp/game/: BTXDAndroid.cpp  BTXDAndroid.hpp
cpp/game/android/: BTXDAndroid.cpp  BTXDAndroid.hpp
cpp/game/core/: CMakeLists.txt
cpp/game/core/game/: BTXDGame.cpp  BTXDGame.hpp
java/com/lowiq/android/btxd/activity/: MainActivity.kt
java/com/lowiq/android/btxd/jni/: NativeUtil.kt
java/com/lowiq/android/btxd/view/: GLESView.kt
java/com/lowiq/android/btxd/view/render/: GLESRenderer.kt
